<resources>
    <string name="app_name">Online_Recreation</string>
    <string name="recreation">Recreation</string>
    <string name="icon_user">Icon_User</string>
    <string name="password">Password</string>
    <string name="Login">Login/Registre</string>
    <string name="start">Start</string>
    <string name="enter_code">Enter Code</string>
    <string name="facebbok">FACEBBOK</string>
    <string name="google">GOOGLE</string>
    <string name="send_code">SEND CODE</string>
    <string name="enter_telephone_number">Enter telephone number</string>
    <string name="enter_code_received">Enter code received</string>
    <string name="accept">Accept</string>
    <string name="o_you_can_enter_with">Or you can enter with:</string>
    <string name="trolly_icon">Trolly</string>
    <string name="icono_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name">NAME</string>
    <string name="guest">guest</string>
</resources>